# Jarvis-Mark-II

./: .gitignore  CHANGELOG.MD  Jarvis Mark II.py  README.MD  audio.py  chat.py  command_modules_init.py  commands.py  config.ini  config.py  exit.py  input_listener.py  localization.py  main.py  music.py  obs_integration.py  personality.py  pyproject.toml  requirements.txt  setup.bat  start.bat  tasks.py  updater.py  version.ini
.github/workflows/: auto-release.yml
command_modules/: macro_module.py  main_module.py  music_module.py  obs_module.py  spotify_module.py
locales/: setup_messages.json
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/es/LC_MESSAGES/: messages.mo  messages.po
locales/fr/LC_MESSAGES/: messages.mo  messages.po
locales/pt/LC_MESSAGES/: messages.mo  messages.po
personalities/: friday.json  heimdall.json  jarvis.json  karen.json  ultron.json
